# LuaSTG-x

./: .cocos-project.json  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeModules.cmake  CMakeSources.cmake  LICENSE  README.md  README_ZH.md  config.json  external.cmake  modules.cmake  src.cmake
.github/workflows/: manual_release.yml
frameworks/Classes/: CirularQueue.hpp  ControllerHelper.cpp  ControllerHelper.h  LabelPool.cpp  LabelPool.h  MemPoolManager.cpp  MemPoolManager.h  RandomWELL512.cpp  RandomWELL512.h  WindowHelper.cpp  WindowHelper.h  XBinaryHelper.cpp  XBinaryHelper.h  XBuffer.cpp  XBuffer.h  XFileDialog.cpp  XFileDialog.h  XFileUtils.cpp  XFileUtils.h  XGifRecoder.cpp  XGifRecoder.h  XInfoware.cpp  XInfoware.h  XLabel.cpp  XLabel.h  XLatex.cpp  XLatex.h  XLuaModuleRegistry.h  XProfiler.cpp  XProfiler.h  XRand.cpp  XRand.h  XRefAdapter.cpp  XRefAdapter.h  XStopWatch.cpp  XStopWatch.h  XStream.cpp  XStream.h  XThreadPool.hpp  XTriangles.cpp  (+5 more)
frameworks/LSTG/: AppFrame.cpp  AppFrame.h  CirularQueue.hpp  CollisionDetect.h  ComponentData.h  ComponentDataAni.cpp  ComponentDataAni.h  ComponentDataBlend.cpp  ComponentDataParticle.cpp  ComponentDataParticle.h  ComponentDataVertex.cpp  ComponentDataVertex.h  ComponentManager.cpp  ComponentManager.h  GOSymbolNumber.cpp  GameObjectBentLaser.h  GameObjectManager.cpp  GameObjectManager.h  GameObjectPool.cpp  GameObjectPool.h  GameObjectPropertyHash.cpp  GameObjectSymbol.cpp  Global.h  InputManager.cpp  InputManager.h  LWColor.h  LWRandomizer.cpp  LWRandomizer.h  LW_Frame.cpp  LW_Graph.cpp  LW_Math.cpp  LW_Text.cpp  LogSystem.cpp  LogSystem.h  RenderMode.cpp  RenderMode.h  Renderer.cpp  Renderer.h  ResAnimation.cpp  ResAnimation.h  (+16 more)
frameworks/LSTG/Component/: ComponentData.cpp  ComponentDataAni.h  ComponentDataBlend.h  ComponentDataLabel.cpp  ComponentDataLabel.h  ComponentDataLight.h  ComponentDataParticle.h  ComponentDataTrasform.h  ComponentDataVertex.cpp  ComponentDataVertex.h  ComponentManager.cpp  ComponentManager.h
frameworks/LSTG/LuaWrapper/: LWColor.cpp  LWProfiler.cpp  LWRandomizer.cpp  LW_Frame.cpp  LW_Graph.cpp  LW_Input.cpp  LW_Math.cpp  LW_Object.cpp  LW_Render.cpp  LW_Text.cpp  LuaWrapper.cpp
frameworks/LSTG/Object/: GameClass.cpp  GameClass.h  GameObject.cpp  GameObject.h  GameObjectBentLaser.cpp  GameObjectManager.cpp  GameObjectManager.h  GameObjectPool.cpp  GameObjectPool.h  GameObjectPropertyHash.cpp  GameObjectPropertyHash.h  GameObjectSet.cpp  GameObjectSet.h
frameworks/LSTG/Resource/: GameResources.h  ResAnimation.cpp  ResAnimation.h  ResAudio.cpp  ResAudio.h  ResBase.cpp  ResBase.h  ResFX.cpp  ResFX.h  ResFont.cpp  ResFont.h  ResParticle.cpp  ResParticle.h  ResRenderTarget.cpp  ResRenderTarget.h  ResSprite.cpp  ResSprite.h  ResTexture.cpp  ResTexture.h
frameworks/LSTG/Symbol/: GOSymbolBoolean.cpp  GOSymbolBoolean.h  GOSymbolNumber.cpp  GameObjectSymbol.cpp  GameObjectSymbol.h
frameworks/LSTG/Util/: UtilColor.cpp  UtilColor.h  UtilGLDefinition.cpp  UtilGLDefinition.h  UtilLua.cpp  UtilLua.h  UtilLuaConversion.cpp  UtilLuaConversion.h  UtilLuaRes.h  UtilShader.cpp  Utility.cpp  Utility.h
frameworks/LuaBindings/: LuaBindings.cpp  LuaBindings.h  lua_BentLaser_auto.cpp  lua_BentLaser_auto.hpp  lua_Buffer_auto.cpp  lua_Buffer_auto.hpp  lua_FileDialog_auto.cpp  lua_FileDialog_auto.hpp  lua_Latex_auto.cpp  lua_Latex_auto.hpp  lua_LogSystem_auto.cpp  lua_LogSystem_auto.hpp  lua_ObjSym_auto.cpp  lua_ObjSym_auto.hpp  lua_ParticlePool_auto.cpp  lua_ParticlePool_auto.hpp  lua_Random_auto.cpp  lua_Random_auto.hpp  lua_RenderMode_auto.cpp  lua_RenderMode_auto.hpp  lua_ResourceMgr_auto.cpp  lua_ResourceMgr_auto.hpp  lua_Resource_auto.cpp  lua_Resource_auto.hpp  lua_StopWatch_auto.cpp  lua_StopWatch_auto.hpp  lua_Stream_auto.cpp  lua_Stream_auto.hpp  lua_Triangles_auto.cpp  lua_Triangles_auto.hpp  lua_WindowHelper_auto.cpp  lua_WindowHelper_auto.hpp  lua_ZipArchive_auto.cpp  lua_ZipArchive_auto.hpp  lua_cc_configuration_auto.cpp  lua_cc_configuration_auto.hpp  lua_cc_controller_auto.cpp  lua_cc_controller_manual.cpp  lua_cc_ext.cpp  lua_cc_ext.hpp  (+5 more)
frameworks/LuaBindings/lua_conversion/: lua_conversion.hpp  lua_conversion_tolua.hpp
frameworks/runtime-src/Classes/Classes/: ArrayObjectPool.hpp  ControllerHelper.cpp  ControllerHelper.h  LabelPool.cpp  LabelPool.h  MemPoolManager.cpp  MemPoolManager.h  Randomizer.cpp  Randomizer.h  WindowHelper.cpp  WindowHelper.h  XBuffer.cpp  XBuffer.h  XFileDialog.cpp  XFileDialog.h  XFileUtils.cpp  XFileUtils.h  XGifRecoder.cpp  XLabel.cpp  XLabel.h  XLatex.cpp  XLuaModuleRegistry.cpp  XProfiler.cpp  XProfiler.h  XRand.cpp  XRand.h  XStream.cpp  XStream.h  XThreadPool.hpp  XTriangles.cpp  XTriangles.h  XTrianglesCommand.cpp  XTrianglesCommand.h  XZipArchive.h
frameworks/runtime-src/Classes/LSTG/: AppFrame.cpp  AppFrame.h  BlendMode.cpp  BlendMode.h  CollisionDetect.cpp  ComponentDataBlend.h  ComponentDataColli.cpp  ComponentDataColli.h  ComponentDataLabel.h  ComponentDataLight.cpp  ComponentDataLight.h  ComponentDataTrasform.cpp  ComponentDataTrasform.h  ComponentManager.cpp  ComponentManager.h  Dictionary.hpp  GOSymbolNumber.h  GameClass.cpp  GameClass.h  GameObject.cpp  GameObject.h  GameObjectBentLaser.cpp  GameObjectBentLaser.h  GameObjectManager.cpp  GameObjectManager.h  GameObjectPool.cpp  GameObjectPool.h  GameObjectPropertyHash.cpp  GameObjectPropertyHash.h  GameObjectPropertyHash.json  GameObjectSymbol.cpp  GameObjectSymbol.h  GameResources.h  Global.h  InputManager.cpp  InputManager.h  LWBuiltInFunction.cpp  LWBuiltInFunction.h  LWColor.cpp  LWColor.h  (+65 more)
frameworks/runtime-src/proj.android/: build.gradle  gradle.properties  settings.gradle
frameworks/runtime-src/proj.android/app/: build.gradle  (+3 more)
frameworks/runtime-src/proj.linux/: main.cpp
frameworks/runtime-src/proj.win32/: LuaSTG-x.sln  LuaSTG-x.vcxproj  LuaSTG-x.vcxproj.filters  SimulatorWin.cpp  SimulatorWin.h  WindowHelperWin32.cpp  WindowHelperWin32.h  game.aps  game.rc  main.cpp
res/creator/Scene/: launcher.ccreator  launcher2.ccreator  mod_item.ccreator
res/xe/: node.json  node_small.json
(+48 files in other folders)
